# fake-web-events

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
examples/: hello.py
fake_web_events/: __init__.py  event.py  simulation.py  user.py  utils.py
tests/: test_config.py  test_event.py  test_simulation.py  test_user.py  test_utils.py
