[tool.poetry]
name = "fake-web-events"
version = "0.2.5"
description = "Generator of semi-random fake web events"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fake_web_events" }]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^4.1.1"
pyaml = "^20.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
mock = "^4.0.2"
black = "^22.10.0"
bandit = "^1.7.4"
flake8 = "^6.0.0"
toml = "^0.10.2"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B311"]
exclude_dirs = [".venv/", ".git/", "tests"]
assert_used = { skips = ["*/test_*.py", "*/test_*.py", "*/conftest.py"] }
